Unifi/unifi_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: unifi-web
  namespace: unifi
spec:
  rules:
  - host: unifi.k8s.bne-home.net
    http:
      paths:
      - path: /
        backend:
          serviceName: unifi-1591751899-gui
          servicePort: 8443
